# calculator

./: .gitignore  .readthedocs.yaml  .web-compile-config.yml  CMakeLists.txt  MANIFEST.in  README.md  setup.py
docs/: _config.yml  about.rst  conf.py
include/: calculator.h  utils.h
src/: calculator.cpp  main.cpp  utils.cpp
src/scss/: syft-theme.scss
syft_theme/: __init__.py  theme.conf
tests/: test_calculator.cpp
